@@ -1,0 +1,3 @@
+#include "syscalls.h"
+
+syscall(openat2,openat2)
